--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Copy Clipper</string>
+    <string name="ad_unit_id">ca-app-pub-3940256099942544/1033173712</string>
 </resources>
